--- a/src/components/Auth/authMain.scss
+++ b/src/components/Auth/authMain.scss
@@ -1,11 +1,4 @@
-import { ReactNode } from 'react';
-import styled from 'styled-components';
-
-type AuthMainProps = {
-    children: ReactNode;
-}
-
-export const MainPage = styled.main`
+.auth__main {
     flex: 9;
 
     height: inherit;
@@ -25,7 +18,8 @@ export const MainPage = styled.main`
         flex-direction: column;
         align-items: stretch;
 
-        > img { // ">" Para pegar somente a imagem dentro do main__content.
+        >img {
+            // ">" Para pegar somente a imagem dentro do main__content.
             align-self: center;
         }
 
@@ -72,11 +66,12 @@ export const MainPage = styled.main`
                 padding: 0;
                 border: 0;
 
-                input, button {
+                input,
+                button {
                     width: 100%;
                 }
 
-                input { 
+                input {
                     height: 3.125rem;
                     padding: 0 1rem;
                     border-radius: 0.5rem;
@@ -100,13 +95,5 @@ export const MainPage = styled.main`
                 color: var(--pink__light);
             }
         }
-    }  
-`;
-
-export function AuthMain(props: AuthMainProps) {
-    return (
-        <MainPage>
-            {props.children}
-        </MainPage>
-    )
+    }
 }
