--- a/src/components/RoomCode/styles.scss
+++ b/src/components/RoomCode/styles.scss
@@ -3,11 +3,20 @@
 
     height: 2.5rem;
     overflow: hidden;
+    padding: 0;
     border-radius: 0.5rem;
     border: 0.063rem solid var(--purple__dark);
     background-color: var(--white__light);
+    transition: all 0.2s ease;
 
     display: flex;
+
+    color: var(--black__light);
+
+    &:not(:disabled):hover {
+        border-color: transparent;
+        background-color: var(--gray__light);
+    }
 
     div {
         height: inherit;
