Funçao de dar like na question

--- a/src/components/Auth/authMain.scss
+++ b/src/components/Auth/authMain.scss
@@ -23,7 +23,7 @@
             align-self: center;
         }
 
-        .button__sec {
+        .button__.second__ {
             margin-top: 4rem;
         }
 
