--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -1,7 +1,7 @@
-button {
+.button__ {
     cursor: pointer;
 
-    height: 3.125rem;
+    height: 2.5rem;
     padding: 0 1.2rem;
     border: none;
     border-radius: 0.5rem;
@@ -28,11 +28,38 @@ button {
         cursor: not-allowed;
     }
 
-    &.button__sec {
+    &.outlined__ {
+        color: var(--purple__light);
+        border: 0.063rem solid currentColor;
+        background-color: var(--white__light);
+
+        &:not(:disabled):hover {
+            color: var(--white__light);
+        }
+    }
+
+    &.second__ {
         background-color: var(--pink__light);
 
         &:not(:disabled):hover {
             background-color: var(--pink__dark);
+        }
+    }
+
+    &.danger__ {
+        background-color: var(--red__light);
+
+        &:not(:disabled):hover {
+            background-color: var(--red__dark);
+        }
+    }
+
+    &.clear__ {
+        background-color: var(--gray__light);
+        color: var(--gray__dark);
+
+        &:not(:disabled):hover {
+            background-color: var(--gray__medium);
         }
     }
 }
