--- a/src/pages/Room/room.scss
+++ b/src/pages/Room/room.scss
@@ -14,6 +14,11 @@
             >img {
                 max-height: 2.813rem;
             }
+
+            div {
+                display: flex;
+                gap: 1rem;
+            }
         }
     }
 
